# discussion

./: .gitignore  .project  README.md  classes.py  merge.txt  minimax.txt  props.txt  pyproject.toml  queue.py  requirements.txt  stack.py
src/cmsc142/: __init__.py  queue.py
src/cmsc142.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cmsc142/mazes/: __init__.py  maze.txt  mazes.py
src/cmsc142/queue/: __init__.py  queue_with_stack.py
src/cmsc142/sets/: sets.py
src/cmsc142/sorting/: sorting.py
src/cmsc142/stack/: stack.py
src/cmsc142/trees/: trees.py
src/example_package/: __init__.py  classes.py  queue-with-stack.py  stack.py
src/example_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: pbt_tests.py  tests.py
