[project]
name = "example_package"
version = "0.0.1"
authors = [
  { name="ethan chou", email="echou1@umd.edu" },
]
description = "cmsc 142 discussion"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/echoumcp1/cmsc142"